# Data-Scraper-Lead-Audit-Pro

./: .env.example  .gitignore  .prettierrc  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_lead_discovery.py  003_business_enrichment.py  004_audit_enhancements.py  005_lead_scoring.py  006_ai_report_content.py  007_discovery_sources.py  008_discovery_scrape_metadata.py  009_audit_column_repair.py  010_audit_extended_columns.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  db_errors.py  middleware.py  permissions.py  rate_limit.py  redis.py  request_logging.py  security.py  sync_database.py  token_store.py
backend/app/models/: __init__.py  audit.py  enrichment.py  export.py  lead_discovery.py  lead_scoring.py  report.py  user.py  website.py
backend/app/repositories/: __init__.py  audit_repository.py  base.py  enrichment_repository.py  export_repository.py  lead_discovery_repository.py  (+4 more)
backend/scripts/: __init__.py  create_user.py  load_test.py  seed_admin.py  setup_database.py  setup_postgres.sql  smoke_test.py
backend/storage/: .gitkeep
backend/tests/: conftest.py  test_accessibility.py  test_ai_report.py  test_audit_categories.py  test_auth_service.py  test_db_errors.py  test_enrichment.py  test_health.py  test_lead_scoring.py  test_permissions.py  test_report_service.py  test_reports_api.py  test_seo_service.py  test_website_service.py
(+220 files in other folders)
